syntax = "proto3";

package com.hamid;

service StockMarketService {
  rpc GetRealTimeStockPrices (StockRequest) returns (stream StockResponse);
  rpc getStockPrice (StockRequest) returns (StockResponse);
}

message StockRequest {
  string stock_symbol = 1;
}

message StockResponse {
  string stock_symbol = 1;
  float price = 2;
  int64 timestamp = 3;
}